code/ingress/global-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  namespace: default
  labels:
    app: global-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.org/websocket-services: "chat-backend-receiver-service"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /instagram-frontend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: instagram-frontend
                port:
                  number: 3000

          - path: /instagram-backend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: instagram-backend
                port:
                  number: 9000
          
          - path: /chat-frontend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-frontend-service
                port:
                  number: 3000
          
          - path: /chat-backend-sender(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-sender-service
                port:
                  number: 9200

          - path: /chat-backend-receiver(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-backend-receiver-service
                port:
                  number: 9300
